fix mobile nav overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -244,7 +244,14 @@ a:hover {
     display: inline-block;
     list-style: none;
     padding: 1.5rem 0.75rem;
+    font-size: 1rem;
     margin: 0;
+}
+
+@media screen and (max-width: 700px) {
+    .global-nav__item {
+        font-size: 0.875rem;
+    }
 }
 
 .global-nav__link {
